load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ecsact_lsp_server",
    srcs = [
        "details/interfaces.hh",
        "details/jsonrpc_stream.hh",
        "details/message_manager.hh",
        "details/message_receiver.hh",
        "details/message_sender.hh",
        "details/messages.hh",
        "details/workspace_manager.hh",
        "ecsact_lsp_server.cc",
    ],
    copts = copts,
    deps = [
        "@docopt.cpp//:docopt",
        "@ecsact_interpret",
        "@ecsact_parse",
        "@nlohmann_json//:json",
    ],
)
