module(
    name = "ecsact_lsp_server",
    version = "0.2.0",
    compatibility_level = 2,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "nlohmann_json", version = "3.11.2")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "docopt.cpp", version = "0.6.2")
bazel_dep(name = "ecsact_parse", version = "0.3.3")
bazel_dep(name = "ecsact_runtime", version = "0.5.3")
bazel_dep(name = "ecsact_interpret", version = "0.5.2")
